--- a/src/pages/about/About.css
+++ b/src/pages/about/About.css
@@ -1,13 +1,13 @@
-.aboutContent {
-    width:100vw;
-    min-height:81vh;
-    padding:25px 0px 0px 0px;
-}
-
-.bio {
+.aboutBio {
     width:75vw;
     margin:auto;
     font-size:20px;
     text-align:justify;
     padding:10px 0px 0px 0px;
+}
+
+.aboutContent {
+    width:100vw;
+    min-height:81vh;
+    padding:25px 0px 0px 0px;
 }
